# YT_Downloader

./: .gitignore  Cargo.toml
docs/memory/: MEMORY.md  feedback_auto_launch.md  feedback_auto_testing.md  feedback_format_selection.md  feedback_tauri_camelcase.md
docs/plans/: rust-rewrite.md  stacher-ui-redesign.md  tauri-migration.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: tauri.ts
frontend/src/pages/: Download.tsx  History.tsx  Queue.tsx  Settings.tsx  TestRunner.tsx
frontend/src/store/: appStore.ts
frontend/src/types/: index.ts
frontend/test/: test-commands.js
src/: app.rs  config.rs  history.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  download_mgr.rs  main.rs  state.rs
src/downloader/: formats.rs  mod.rs  post_process.rs  progress.rs  yt_dlp.rs
src/downloader/cookies/: chromelevator.rs  chromium.rs  firefox.rs  mod.rs  netscape.rs
src/ui/: format_dialog.rs  mod.rs
tests/: cookie_test.rs
