[package]
name = "yt-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", default-features = false, features = ["tokio", "tiny-skia", "canvas"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "fs", "io-util", "rt-multi-thread", "time", "macros"] }
anyhow = "1"
regex = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

# Cookie extraction
rusqlite = { version = "0.32", features = ["bundled"] }
windows-sys = { version = "0.59", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
data-encoding = "2"
tempfile = "3"
arboard = "3"
toml = "0.8"
futures-lite = "2"
